Closed Bug 1739310 Opened 3 years ago Closed 3 years ago

Fix WindowOcclusionCalculator::ComputeNativeWindowOcclusionStatus()

Categories

(Core :: Graphics, defect)

defect

Tracking

()

RESOLVED FIXED
96 Branch
Tracking Status
firefox96 --- fixed

People

(Reporter: sotaro, Assigned: sotaro)

References

Details

Attachments

(1 file)

The following code is wrong. I made a mistake during porting the ComputeNativeWindowOcclusionStatus() from chromium to gecko.

https://searchfox.org/mozilla-central/rev/88cd13997fb0747cdcd78638fc762ff2d75e1fc5/widget/windows/WinWindowOcclusionTracker.cpp#920

chromium uses (left, top right, bottom), but gecko needs to use (x, y, width, height).

Assignee: nobody → sotaro.ikeda.g
Blocks: 1738977
Blocks: 1732736
Pushed by sikeda.birchill@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/10901b70a66d Fix WindowOcclusionCalculator::ComputeNativeWindowOcclusionStatus() r=nical,gfx-reviewers
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 96 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: