Bug 1739310 - Fix WindowOcclusionCalculator::ComputeNativeWindowOcclusionStatus() r=nical,gfx-reviewers

Fix a mistake during porting the ComputeNativeWindowOcclusionStatus() from chromium to gecko. chromium uses (left, top right, bottom), but gecko needs to use (x, y, width, height).

Differential Revision: https://phabricator.services.mozilla.com/D130331